--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/TatyanaZaytseva/goit-js-hw-08/issues"
   },
-  "homepage": "https://github.com/TatyanaZaytseva/goit-js-hw-08#readme",
+  "homepage": "https://github.com/TatyanaZaytseva/goit-js-hw-08",
   "dependencies": {
     "@vimeo/player": "^2.17.1",
     "lodash.throttle": "^4.1.1",
